--- a/packages/core/src/mixins/_focus-state.scss
+++ b/packages/core/src/mixins/_focus-state.scss
@@ -2,4 +2,5 @@
   outline: 2px solid var(--tds-focus-outline-color);
   box-shadow: 0 0 0 1px var(--tds-white);
   outline-offset: 1px;
+  z-index: 1;
 }
